# package-manager

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  MIRRORS  Makefile  PKGBUILD  README.md  TODO.md  config.yaml  flake.nix  main.py  package-manager-0.1.1-1-any.pkg.tar.zst  package-manager.spec  pkgmgr.yml  post_install()  pyproject.toml  requirements.txt  requirements.yml  result
.claude/: settings.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  codesniffer-ruff.yml  codesniffer-shellcheck.yml  lint-docker.yml  lint-python.yml  lint-shell.yml  linter-python.yml  linter-shell.yml  mark-stable.yml  publish-containers.yml  security-codeql.yml  test-container.yml  test-e2e.yml  test-env-nix.yml  test-env-virtual.yml  test-integration.yml  test-nix-flake-e2e.yml  test-unit.yml  test-virgin-root.yml  test-virgin-user.yml  test.yml
config/: defaults.yaml  wip.yml
debian/: changelog  control  rules
packaging/arch/: .gitignore  PKGBUILD  package-manager.install
packaging/debian/: .gitignore  changelog  control  postinst  rules
packaging/fedora/: package-manager.spec
pkgmgr/: branch_commands.py  capabilities.py  changelog.py  cli.py  clone_repos.py  config_init.py  context.py  create_executable.py  create_ink.py  create_repo.py  deinstall_repos.py  delete_repos.py  exec_git_command.py  exec_proxy_command.py  get_repo_dir.py  get_selected_repos.py  install_repos.py  interactive_add.py  list_repositories.py  load_config.py  pull_with_verification.py  release.py  resolve_repos.py  run_command.py  save_user_config.py  show_config.py  status_repos.py  update_repos.py  version_sources.py
pkgmgr/actions/: release.py
pkgmgr/cli/: __init__.py  parser.py  proxy.py
pkgmgr/cli_core/: __init__.py  dispatch.py  parser.py  proxy.py
pkgmgr/installers/: __init__.py  ansible_requirements.py  aur.py  base.py  makefile.py  nix_flake.py  pkgbuild.py  pkgmgr_manifest.py  python.py
scripts/: docker-entry-dev.sh  init-nix.sh  launcher.sh  pkgmgr-wrapper.sh  uninstall.sh
scripts/docker/: entry.sh  slim.sh
scripts/github/: check-tagged-commit-on-main.sh  mark-stable-if-highest-version.sh  wait-for-main-ci-success.sh
scripts/installation/: dependencies.sh  init.sh  lib.sh  main.sh  os_resolver.sh  package.sh  run-dependencies.sh  run-package.sh  venv-create.sh
scripts/nix/: README.md  init.sh
scripts/setup/: nix.sh  venv.sh
scripts/test/: test-common.sh  test-container.sh  test-e2e.sh  test-env-nix.sh  test-env-virtual.sh  test-integration.sh  test-unit.sh
src/pkgmgr/: __init__.py
templates/default/: README.md.j2  flake.nix.j2  pyproject.toml.j2
tests/: test_install_repos.py  test_integration_install_all_shallow.py  test_main.py
tests/e2e/: _util.py  test_branch_commands.py  test_branch_help.py  test_changelog_commands.py  test_clone_all.py  test_config_commands.py  test_install_all_shallow.py  test_install_makefile_three_times.py  test_install_pkgmgr_shallow.py  test_install_pkgmgr_three_times_nix.py  test_install_pkgmgr_three_times_venv.py  test_integration_branch_commands.py  test_integration_install_all_shallow.py  test_integration_list_commands.py  test_integration_make_commands.py  test_integration_proxy_commands.py  test_list_commands.py  (+18 more)
(+313 files in other folders)
